# fallEngine

./: CMakeLists.txt  LICENSE  README.md
doc/: caida.es.txt  caida_en.txt  caida_es.txt  caida_game.txt  commands.txt
fallengine/: FallEngine.cbp  FallEngine.depend  FallEngine.layout  main.cpp
fallengine/fescript/: commands.txt
fallengine/include/: fallEngine.h
fallengine/include/fallengine/: card.h  game.h  hand.h  player.h  table.h
fallengine/include/tests/: tests_main.h
include/: fallengine.h
include/fallengine/: card.h  card.hpp  fallengine.h  fallengine.hpp  game.h  game.hpp  hand.h  hand.hpp  player.h  player.hpp  table.h  table.hpp
include/fespar/: commands.txt  fespar.h  fespar.hpp
include/tests/: tests_main.h  tests_main.hpp
src/: main.cpp  test_main.cpp
