CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(fallengine)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 17)
ADD_EXECUTABLE(fallengine src/main.cpp)
if ( CMAKE_COMPILER_IS_GNUCC )
    target_compile_options(fallengine PRIVATE "-Wall")
endif()
if ( MSVC )
    target_compile_options(fallengine PRIVATE "/W4")
endif()
